Add Authorization, notifications & payment refactor
Add AuthorizationException and propagate authorization checks across controllers; handle authorization failures in ApplicationController. Refactor PaymentController into explicit constructors for standard payment, booking and join modes, move pricing helpers into the controller and remove the separate PricingService. Enhance NotificationService: add BOOKING_REQUEST event, thread-safe observer management, and new notifyBookingRequest API; rename/rename observer to FieldManagerObserver and update views to subscribe. Rename utils.Utils to MapsAPI and expose city helpers; update OrganizeMatchController to use MapsAPI. Add filesystem seed data (data/matches.json) and improve MatchDAOFileSystem/DBMS DAO code (stream toList, id generation, mapping full entities). Add validation to model.domain.Match.setMissingPlayers. Update many controllers/views to pass/consume MatchBean/FieldBean and to use controller.getFieldManager() rather than passing User instances. Remove some obsolete converters/exceptions and delete internal copilot instructions file. Overall cleanup and coordination changes to support booking requests, authorization and simplified payment flows.